Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,37 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Phó thủ tướng yêu cầu xử lý ô nhiễm không khí Hà Nội",
+    "content": "Phó thủ tướng Trần Hồng Hà đã yêu cầu các bộ ngành phối hợp với TP Hà Nội xây dựng đề án trình Thủ tướng nhằm xử lý tình trạng ô nhiễm không khí nghiêm trọng tại Thủ đô. Ông nhấn mạnh cần nắm rõ nguồn gây ô nhiễm và đề xuất các giải pháp như di dời cơ sở gây ô nhiễm nặng và áp dụng tiêu chuẩn khí thải cao hơn. Tình trạng ô nhiễm không khí ở Hà Nội đã gia tăng trong suốt 10 năm qua, đặc biệt trong các tháng giao mùa.",
+    "link": "https://vnexpress.net/pho-thu-tuong-yeu-cau-xu-ly-o-nhiem-khong-khi-ha-noi-4866202.html",
+    "cat": "thoi-su",
+    "positivity": 5,
+    "importance": 8,
+    "question": "Phó thủ tướng đã yêu cầu ai xử lý ô nhiễm không khí ở Hà Nội?",
+    "answers": [
+      {
+        "text": "Các bộ ngành phối hợp với TP Hà Nội",
+        "correct": true
+      },
+      {
+        "text": "Chủ tịch UBND TP Hà Nội",
+        "correct": false
+      },
+      {
+        "text": "Người dân Hà Nội",
+        "correct": false
+      },
+      {
+        "text": "Các tổ chức môi trường quốc tế",
+        "correct": false
+      },
+      {
+        "text": "Các doanh nghiệp sản xuất",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Điều nên làm khi huyết áp không giảm",
     "content": "Khi huyết áp không giảm, người bệnh cần kiểm tra lại đơn thuốc và điều trị nguyên nhân tiềm ẩn. Họ nên thông báo cho bác sĩ về tất cả loại thuốc và thực phẩm bổ sung đang sử dụng để bác sĩ có thể điều chỉnh liều lượng và loại thuốc phù hợp. Ngoài ra, việc thay đổi lối sống như ăn uống lành mạnh, duy trì cân nặng hợp lý và thư giãn cũng rất quan trọng để kiểm soát huyết áp.",
     "link": "https://vnexpress.net/dieu-nen-lam-khi-huyet-ap-khong-giam-4866143.html",
@@ -134,6 +165,33 @@
       },
       {
         "text": "Chỉ ảnh hưởng đến sức khỏe tâm lý.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Ukraine thừa nhận không có đủ ngân sách cho quân đội",
+    "content": "Tổng thống Ukraine Volodymyr Zelensky đã thừa nhận rằng ngân sách quốc phòng của Ukraine không đủ để duy trì quân đội trong bối cảnh xung đột kéo dài với Nga. Ông nhấn mạnh rằng Ukraine cần hỗ trợ tài chính từ châu Âu và Mỹ để củng cố lực lượng quân sự. Hiện tại, Ukraine dành tới 30% GDP cho quốc phòng, nhưng vẫn phải đối mặt với nhiều thách thức về tài chính và trang bị quân sự do tiềm lực kinh tế yếu hơn so với Nga.",
+    "link": "https://dantri.com.vn/the-gioi/ukraine-thua-nhan-khong-co-du-ngan-sach-cho-quan-doi-20250326164345450.htm",
+    "cat": "the-gioi",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Tại sao Ukraine không đủ ngân sách cho quân đội?",
+    "answers": [
+      {
+        "text": "Vì ngân sách quốc phòng không đủ để duy trì quân đội.",
+        "correct": true
+      },
+      {
+        "text": "Do chính phủ Ukraine không quản lý tài chính tốt.",
+        "correct": false
+      },
+      {
+        "text": "Vì Ukraine không nhận được đủ hỗ trợ từ châu Âu.",
+        "correct": false
+      },
+      {
+        "text": "Do tình hình kinh tế của Ukraine đang ổn định.",
         "correct": false
       }
     ]
@@ -2600,33 +2658,6 @@
     ]
   },
   {
-    "title": "Vì sao hắt hơi liên tục khi hít tiêu hay hành tây?",
-    "content": "Hắt hơi liên tục khi hít phải tiêu hoặc hành tây là một phản xạ tự nhiên của cơ thể do các hợp chất dễ bay hơi trong những thực phẩm này gây ra. Tiêu chứa piperine và hành tây có allyl propyl disulfide, khi hít vào sẽ kích thích niêm mạc mũi và mắt, dẫn đến phản ứng hắt hơi để loại bỏ các chất kích thích. Điều này không nhất thiết là dấu hiệu dị ứng, nhưng những người có niêm mạc nhạy cảm có thể phản ứng mạnh hơn. Để giảm triệu chứng, người dùng nên đeo khẩu trang và giữ không gian thông thoáng khi chế biến các thực phẩm này.",
-    "link": "https://vnexpress.net/vi-sao-hat-hoi-lien-tuc-khi-hit-tieu-hay-hanh-tay-4865952.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 5,
-    "question": "Tại sao hắt hơi khi hít phải tiêu hay hành tây?",
-    "answers": [
-      {
-        "text": "Vì các hợp chất trong tiêu và hành tây kích thích niêm mạc mũi.",
-        "correct": true
-      },
-      {
-        "text": "Vì đây là dấu hiệu của bệnh dị ứng.",
-        "correct": false
-      },
-      {
-        "text": "Vì không khí lạnh làm cho mũi nhạy cảm hơn.",
-        "correct": false
-      },
-      {
-        "text": "Vì tiêu và hành tây có mùi hôi mạnh.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Tăng 60 kg trong hai năm do mắc chứng cuồng ăn",
     "content": "Chị Hà, 27 tuổi, đã tăng 60 kg trong hai năm do mắc chứng rối loạn ăn uống sau biến cố hôn nhân. Hiện tại, chị đang được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội với mục tiêu kiểm soát hành vi ăn uống và giảm cân. Các bác sĩ đã hướng dẫn chị xây dựng thói quen ăn uống lành mạnh, kết hợp với liệu pháp tâm lý và thuốc hỗ trợ. Sau hai tháng điều trị, chị đã giảm 6 kg và các chỉ số sức khỏe đang cải thiện dần.",
     "link": "https://vnexpress.net/tang-60-kg-trong-hai-nam-do-mac-chung-cuong-an-4865900.html",
@@ -2653,6 +2684,33 @@
       },
       {
         "text": "80 kg",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Vì sao hắt hơi liên tục khi hít tiêu hay hành tây?",
+    "content": "Hắt hơi liên tục khi hít phải tiêu hoặc hành tây là một phản xạ tự nhiên của cơ thể do các hợp chất dễ bay hơi trong những thực phẩm này gây ra. Tiêu chứa piperine và hành tây có allyl propyl disulfide, khi hít vào sẽ kích thích niêm mạc mũi và mắt, dẫn đến phản ứng hắt hơi để loại bỏ các chất kích thích. Điều này không nhất thiết là dấu hiệu dị ứng, nhưng những người có niêm mạc nhạy cảm có thể phản ứng mạnh hơn. Để giảm triệu chứng, người dùng nên đeo khẩu trang và giữ không gian thông thoáng khi chế biến các thực phẩm này.",
+    "link": "https://vnexpress.net/vi-sao-hat-hoi-lien-tuc-khi-hit-tieu-hay-hanh-tay-4865952.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 5,
+    "question": "Tại sao hắt hơi khi hít phải tiêu hay hành tây?",
+    "answers": [
+      {
+        "text": "Vì các hợp chất trong tiêu và hành tây kích thích niêm mạc mũi.",
+        "correct": true
+      },
+      {
+        "text": "Vì đây là dấu hiệu của bệnh dị ứng.",
+        "correct": false
+      },
+      {
+        "text": "Vì không khí lạnh làm cho mũi nhạy cảm hơn.",
+        "correct": false
+      },
+      {
+        "text": "Vì tiêu và hành tây có mùi hôi mạnh.",
         "correct": false
       }
     ]
@@ -2774,6 +2832,33 @@
     ]
   },
   {
+    "title": "Hy hữu: Công ty nhiệt điện của Geleximco báo ‘nhầm’ lỗ đậm thành lãi, huy động nghìn tỉ trái phiếu",
+    "content": "Công ty cổ phần Nhiệt điện Thăng Long, thuộc Tập đoàn Geleximco, vừa đính chính một sai sót nghiêm trọng trong báo cáo tài chính khi báo lãi thay vì lỗ. Theo đó, công ty đã ghi nhận lỗ 528 tỉ đồng cho năm 2023, trong khi năm 2022 lãi 121,8 tỉ đồng. Sai sót này được cho là do nhầm lẫn trong việc đánh dấu vị trí cột 'kỳ trước' và 'kỳ báo cáo'. Ngoài ra, công ty cũng đã huy động gần 1.800 tỉ đồng từ phát hành trái phiếu doanh nghiệp vào tháng 8-2024.",
+    "link": "https://tuoitre.vn/hy-huu-cong-ty-nhiet-dien-cua-geleximco-bao-nham-lo-dam-thanh-lai-huy-dong-nghin-ti-trai-phieu-20250326091855138.htm",
+    "cat": "kinh-doanh",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao Nhiệt điện Thăng Long phải đính chính báo cáo tài chính?",
+    "answers": [
+      {
+        "text": "Vì sai sót trong việc báo cáo lãi thành lỗ",
+        "correct": true
+      },
+      {
+        "text": "Do thay đổi ban lãnh đạo",
+        "correct": false
+      },
+      {
+        "text": "Vì áp lực từ cổ đông",
+        "correct": false
+      },
+      {
+        "text": "Do quy định mới của HNX",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Các mốc thời gian quan trọng kỳ thi tốt nghiệp THPT 2025",
     "content": "Kỳ thi tốt nghiệp THPT năm 2025 sẽ diễn ra vào ngày 26-27 tháng 6. Thí sinh có thể đăng ký dự thi từ ngày 21/4 đến 28/4, trong đó có thời gian để đăng ký thử từ 15-18/4. Bộ GD&ĐT cũng yêu cầu thí sinh sử dụng một loại giấy tờ tùy thân nhất định và đảm bảo ảnh hồ sơ đạt yêu cầu về độ phân giải. Ngày 28/6 sẽ là lịch thi dự phòng.",
     "link": "https://dantri.com.vn/giao-duc/cac-moc-thoi-gian-quan-trong-ky-thi-tot-nghiep-thpt-2025-20250326085929751.htm",
@@ -2800,33 +2885,6 @@
       },
       {
         "text": "Thí sinh chỉ cần thi một môn duy nhất",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Hy hữu: Công ty nhiệt điện của Geleximco báo ‘nhầm’ lỗ đậm thành lãi, huy động nghìn tỉ trái phiếu",
-    "content": "Công ty cổ phần Nhiệt điện Thăng Long, thuộc Tập đoàn Geleximco, vừa đính chính một sai sót nghiêm trọng trong báo cáo tài chính khi báo lãi thay vì lỗ. Theo đó, công ty đã ghi nhận lỗ 528 tỉ đồng cho năm 2023, trong khi năm 2022 lãi 121,8 tỉ đồng. Sai sót này được cho là do nhầm lẫn trong việc đánh dấu vị trí cột 'kỳ trước' và 'kỳ báo cáo'. Ngoài ra, công ty cũng đã huy động gần 1.800 tỉ đồng từ phát hành trái phiếu doanh nghiệp vào tháng 8-2024.",
-    "link": "https://tuoitre.vn/hy-huu-cong-ty-nhiet-dien-cua-geleximco-bao-nham-lo-dam-thanh-lai-huy-dong-nghin-ti-trai-phieu-20250326091855138.htm",
-    "cat": "kinh-doanh",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao Nhiệt điện Thăng Long phải đính chính báo cáo tài chính?",
-    "answers": [
-      {
-        "text": "Vì sai sót trong việc báo cáo lãi thành lỗ",
-        "correct": true
-      },
-      {
-        "text": "Do thay đổi ban lãnh đạo",
-        "correct": false
-      },
-      {
-        "text": "Vì áp lực từ cổ đông",
-        "correct": false
-      },
-      {
-        "text": "Do quy định mới của HNX",
         "correct": false
       }
     ]
@@ -4556,37 +4614,6 @@
     ]
   },
   {
-    "title": "Những thực phẩm lên men giúp tóc chắc khỏe",
-    "content": "Thực phẩm lên men như sữa chua, kim chi và các sản phẩm từ đậu nành có tác dụng tốt cho sức khỏe tóc. Chúng cung cấp lợi khuẩn, vitamin B và chất chống oxy hóa, giúp nuôi dưỡng da đầu và thúc đẩy tóc mọc khỏe. Bác sĩ Hoàng Quyết Tiến cho biết, các lợi khuẩn này giúp cân bằng hệ vi sinh trên da đầu, ngăn ngừa gàu và viêm nhiễm, từ đó tạo điều kiện cho tóc phát triển tốt hơn. Tuy nhiên, cần sử dụng thực phẩm lên men một cách hợp lý để tránh ảnh hưởng xấu đến sức khỏe.",
-    "link": "https://vnexpress.net/nhung-thuc-pham-len-men-giup-toc-chac-khoe-4865722.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Những thực phẩm lên men nào giúp tóc chắc khỏe?",
-    "answers": [
-      {
-        "text": "Sữa chua, kim chi, sản phẩm lên men từ đậu nành và giấm",
-        "correct": true
-      },
-      {
-        "text": "Chỉ sữa chua",
-        "correct": false
-      },
-      {
-        "text": "Chỉ kim chi",
-        "correct": false
-      },
-      {
-        "text": "Chỉ giấm táo",
-        "correct": false
-      },
-      {
-        "text": "Chỉ dưa cải muối",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "U22 Trung Quốc - U22 Việt Nam: Viktor Lê đá chính",
     "content": "U22 Việt Nam sẽ gặp U22 Trung Quốc trong trận giao hữu cuối cùng tại giải Tứ Hùng Diêm Thành. Viktor Lê được chọn đá chính trong đội hình xuất phát. Nếu Việt Nam thắng trận này, họ sẽ giành chức vô địch giải đấu, trong khi Trung Quốc hiện đang dẫn đầu với 4 điểm. Đây là trận đấu quyết định cho ngôi vô địch, với sự tham gia của bốn đội gồm Việt Nam, Trung Quốc, Hàn Quốc và Uzbekistan.",
     "link": "https://vnexpress.net/truc-tiep-bong-da-u22-trung-quoc-vs-u22-viet-nam-4865729.html",
@@ -4613,6 +4640,37 @@
       },
       {
         "text": "U22 Ấn Độ",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Những thực phẩm lên men giúp tóc chắc khỏe",
+    "content": "Thực phẩm lên men như sữa chua, kim chi và các sản phẩm từ đậu nành có tác dụng tốt cho sức khỏe tóc. Chúng cung cấp lợi khuẩn, vitamin B và chất chống oxy hóa, giúp nuôi dưỡng da đầu và thúc đẩy tóc mọc khỏe. Bác sĩ Hoàng Quyết Tiến cho biết, các lợi khuẩn này giúp cân bằng hệ vi sinh trên da đầu, ngăn ngừa gàu và viêm nhiễm, từ đó tạo điều kiện cho tóc phát triển tốt hơn. Tuy nhiên, cần sử dụng thực phẩm lên men một cách hợp lý để tránh ảnh hưởng xấu đến sức khỏe.",
+    "link": "https://vnexpress.net/nhung-thuc-pham-len-men-giup-toc-chac-khoe-4865722.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Những thực phẩm lên men nào giúp tóc chắc khỏe?",
+    "answers": [
+      {
+        "text": "Sữa chua, kim chi, sản phẩm lên men từ đậu nành và giấm",
+        "correct": true
+      },
+      {
+        "text": "Chỉ sữa chua",
+        "correct": false
+      },
+      {
+        "text": "Chỉ kim chi",
+        "correct": false
+      },
+      {
+        "text": "Chỉ giấm táo",
+        "correct": false
+      },
+      {
+        "text": "Chỉ dưa cải muối",
         "correct": false
       }
     ]
@@ -4667,33 +4725,6 @@
       },
       {
         "text": "Mô hình phối hợp đa ngành",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Khách du lịch tiêu gần 30.000 tỉ đồng ở Hà Nội",
-    "content": "Trong quý 1 năm 2025, Hà Nội đã đón 7,3 triệu lượt khách du lịch, thu về gần 30.000 tỉ đồng. Lượng khách quốc tế đạt khoảng 1,85 triệu lượt, tăng 17,4% so với cùng kỳ năm trước. Đặc biệt, tháng 3-2025 ghi nhận doanh thu cao nhất với gần 11.000 tỉ đồng. Hà Nội tiếp tục phát triển các sản phẩm du lịch mới và tổ chức nhiều sự kiện văn hóa để thu hút du khách.",
-    "link": "https://tuoitre.vn/khach-du-lich-tieu-gan-30-000-ti-dong-o-ha-noi-2025032516501502.htm",
-    "cat": "du-lich",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Hà Nội đã thu về bao nhiêu tiền từ khách du lịch trong quý 1 năm 2025?",
-    "answers": [
-      {
-        "text": "Gần 30.000 tỉ đồng",
-        "correct": true
-      },
-      {
-        "text": "Khoảng 20.000 tỉ đồng",
-        "correct": false
-      },
-      {
-        "text": "Hơn 15.000 tỉ đồng",
-        "correct": false
-      },
-      {
-        "text": "30.000 tỉ đồng",
         "correct": false
       }
     ]
