Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Bí quyết khử tanh thực phẩm theo dân gian",
+    "content": "Bài viết chia sẻ nhiều bí quyết khử tanh thực phẩm theo cách dân gian, đặc biệt là với hải sản và cá. Người nội trợ có thể sử dụng các nguyên liệu tự nhiên như tro bếp, lá tre, lá chuối, nước vo gạo, rượu trắng với gừng, và nước chè xanh để giảm mùi tanh hiệu quả. Ngoài ra, chất chua từ chanh, giấm cùng các loại lá gia vị cũng được nhắc đến như là những phương pháp hữu ích để làm món ăn trở nên hấp dẫn hơn.",
+    "link": "https://vnexpress.net/bi-quyet-khu-tanh-thuc-pham-theo-dan-gian-4866245.html",
+    "cat": "gia-dinh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Làm thế nào để khử tanh cho thực phẩm theo cách dân gian?",
+    "answers": [
+      {
+        "text": "Sử dụng tro bếp, lá tre, lá chuối, nước vo gạo",
+        "correct": true
+      },
+      {
+        "text": "Nấu thực phẩm trên lửa lớn",
+        "correct": false
+      },
+      {
+        "text": "Ngâm thực phẩm trong nước lạnh",
+        "correct": false
+      },
+      {
+        "text": "Dùng nhiều gia vị để che mùi tanh",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Phó thủ tướng yêu cầu xử lý ô nhiễm không khí Hà Nội",
     "content": "Phó thủ tướng Trần Hồng Hà đã yêu cầu các bộ ngành phối hợp với TP Hà Nội xây dựng đề án trình Thủ tướng nhằm xử lý tình trạng ô nhiễm không khí nghiêm trọng tại Thủ đô. Ông nhấn mạnh cần nắm rõ nguồn gây ô nhiễm và đề xuất các giải pháp như di dời cơ sở gây ô nhiễm nặng và áp dụng tiêu chuẩn khí thải cao hơn. Tình trạng ô nhiễm không khí ở Hà Nội đã gia tăng trong suốt 10 năm qua, đặc biệt trong các tháng giao mùa.",
     "link": "https://vnexpress.net/pho-thu-tuong-yeu-cau-xu-ly-o-nhiem-khong-khi-ha-noi-4866202.html",
@@ -2725,28 +2752,32 @@
     ]
   },
   {
-    "title": "Ho ra đờm màu vàng có phải dấu hiệu bệnh?",
-    "content": "Ho ra đờm màu vàng có thể là dấu hiệu của các bệnh hô hấp như viêm phế quản, viêm phổi hoặc hen suyễn. Màu vàng của đờm chủ yếu do sự hiện diện của bạch cầu trung tính đã chết, cho thấy cơ thể đang phản ứng với nhiễm trùng. Nếu tình trạng này kéo dài hơn một tuần hoặc kèm theo các triệu chứng như sốt, khó thở, người bệnh nên đi khám bác sĩ để được chẩn đoán và điều trị kịp thời.",
-    "link": "https://vnexpress.net/ho-ra-dom-mau-vang-co-phai-dau-hieu-benh-4865965.html",
+    "title": "Tăng 60 kg trong hai năm do mắc chứng cuồng ăn",
+    "content": "Chị Hà, 27 tuổi, đã tăng 60 kg trong hai năm do mắc chứng rối loạn ăn uống sau biến cố hôn nhân. Hiện tại, chị đang được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội với mục tiêu kiểm soát hành vi ăn uống và giảm cân. Các bác sĩ đã hướng dẫn chị xây dựng thói quen ăn uống lành mạnh, kết hợp với liệu pháp tâm lý và thuốc hỗ trợ. Sau hai tháng điều trị, chị đã giảm 6 kg và các chỉ số sức khỏe đang cải thiện dần.",
+    "link": "https://vnexpress.net/tang-60-kg-trong-hai-nam-do-mac-chung-cuong-an-4865900.html",
     "cat": "suc-khoe",
     "positivity": 6,
     "importance": 8,
-    "question": "Ho ra đờm màu vàng có phải là dấu hiệu của bệnh hô hấp không?",
+    "question": "Chị Hà đã tăng bao nhiêu kg trong hai năm?",
     "answers": [
       {
-        "text": "Có, ho ra đờm màu vàng có thể là dấu hiệu của bệnh hô hấp.",
+        "text": "60 kg",
         "correct": true
       },
       {
-        "text": "Không, đây chỉ là triệu chứng bình thường.",
+        "text": "50 kg",
         "correct": false
       },
       {
-        "text": "Có, nhưng không cần phải lo lắng.",
+        "text": "70 kg",
         "correct": false
       },
       {
-        "text": "Có, nhưng chỉ nếu kèm theo sốt và đau ngực.",
+        "text": "40 kg",
+        "correct": false
+      },
+      {
+        "text": "80 kg",
         "correct": false
       }
     ]
@@ -2779,32 +2810,28 @@
     ]
   },
   {
-    "title": "Tăng 60 kg trong hai năm do mắc chứng cuồng ăn",
-    "content": "Chị Hà, 27 tuổi, đã tăng 60 kg trong hai năm do mắc chứng rối loạn ăn uống sau biến cố hôn nhân. Hiện tại, chị đang được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội với mục tiêu kiểm soát hành vi ăn uống và giảm cân. Các bác sĩ đã hướng dẫn chị xây dựng thói quen ăn uống lành mạnh, kết hợp với liệu pháp tâm lý và thuốc hỗ trợ. Sau hai tháng điều trị, chị đã giảm 6 kg và các chỉ số sức khỏe đang cải thiện dần.",
-    "link": "https://vnexpress.net/tang-60-kg-trong-hai-nam-do-mac-chung-cuong-an-4865900.html",
+    "title": "Ho ra đờm màu vàng có phải dấu hiệu bệnh?",
+    "content": "Ho ra đờm màu vàng có thể là dấu hiệu của các bệnh hô hấp như viêm phế quản, viêm phổi hoặc hen suyễn. Màu vàng của đờm chủ yếu do sự hiện diện của bạch cầu trung tính đã chết, cho thấy cơ thể đang phản ứng với nhiễm trùng. Nếu tình trạng này kéo dài hơn một tuần hoặc kèm theo các triệu chứng như sốt, khó thở, người bệnh nên đi khám bác sĩ để được chẩn đoán và điều trị kịp thời.",
+    "link": "https://vnexpress.net/ho-ra-dom-mau-vang-co-phai-dau-hieu-benh-4865965.html",
     "cat": "suc-khoe",
     "positivity": 6,
     "importance": 8,
-    "question": "Chị Hà đã tăng bao nhiêu kg trong hai năm?",
+    "question": "Ho ra đờm màu vàng có phải là dấu hiệu của bệnh hô hấp không?",
     "answers": [
       {
-        "text": "60 kg",
+        "text": "Có, ho ra đờm màu vàng có thể là dấu hiệu của bệnh hô hấp.",
         "correct": true
       },
       {
-        "text": "50 kg",
+        "text": "Không, đây chỉ là triệu chứng bình thường.",
         "correct": false
       },
       {
-        "text": "70 kg",
+        "text": "Có, nhưng không cần phải lo lắng.",
         "correct": false
       },
       {
-        "text": "40 kg",
-        "correct": false
-      },
-      {
-        "text": "80 kg",
+        "text": "Có, nhưng chỉ nếu kèm theo sốt và đau ngực.",
         "correct": false
       }
     ]
@@ -3363,32 +3390,32 @@
     ]
   },
   {
-    "title": "Không gian coworking đắt giá lần đầu tiên xuất hiện tại Nghệ An",
-    "content": "Khu đô thị Eco Central Park tại Nghệ An vừa ra mắt không gian coworking đầu tiên với diện tích 1.100m2, kết hợp giữa không gian làm việc và thiên nhiên. Được thiết kế theo phong cách \"live - work - play\", không gian này không chỉ phục vụ cho cư dân mà còn thu hút những người làm việc tự do, tạo cơ hội giao lưu và sáng tạo. Với nhiều cây xanh và ánh sáng tự nhiên, coworking space tại Central Bay hứa hẹn mang lại trải nghiệm làm việc thoải mái, hiệu quả.",
-    "link": "https://tuoitre.vn/khong-gian-coworking-dat-gia-lan-dau-tien-xuat-hien-tai-nghe-an-20250325184509967.htm",
-    "cat": "kinh-doanh",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Không gian coworking nào vừa được ra mắt tại Nghệ An?",
+    "title": "Bất ngờ phát hiện mắc hội chứng tim dễ gây đột tử",
+    "content": "Bài viết đề cập đến trường hợp của Tuấn, 19 tuổi, người vừa được phát hiện mắc hội chứng Brugada, một bệnh di truyền có nguy cơ gây đột tử ở người trẻ. Hội chứng này có thể gây ra rối loạn nhịp tim và thường xảy ra vào ban đêm khi ngủ. Mặc dù chưa có phương pháp chữa khỏi, người bệnh cần được theo dõi và điều trị để tránh các biến chứng nguy hiểm. Các bác sĩ khuyến cáo mọi người nên khám sức khỏe định kỳ để phát hiện sớm các nguy cơ bệnh lý.",
+    "link": "https://vnexpress.net/bat-ngo-phat-hien-mac-hoi-chung-tim-de-gay-dot-tu-4865841.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 9,
+    "question": "Hội chứng Brugada có thể gây ra biến chứng gì cho người bệnh?",
     "answers": [
       {
-        "text": "Central Bay tại Eco Central Park",
+        "text": "Đột tử",
         "correct": true
       },
       {
-        "text": "Milan Workspace",
+        "text": "Ngất xỉu",
         "correct": false
       },
       {
-        "text": "Hanoi Creative Space",
+        "text": "Đau ngực",
         "correct": false
       },
       {
-        "text": "Saigon Coworking Center",
+        "text": "Rối loạn tiêu hóa",
         "correct": false
       },
       {
-        "text": "Da Nang Office Hub",
+        "text": "Bệnh tiểu đường",
         "correct": false
       }
     ]
@@ -3425,32 +3452,32 @@
     ]
   },
   {
-    "title": "Bất ngờ phát hiện mắc hội chứng tim dễ gây đột tử",
-    "content": "Bài viết đề cập đến trường hợp của Tuấn, 19 tuổi, người vừa được phát hiện mắc hội chứng Brugada, một bệnh di truyền có nguy cơ gây đột tử ở người trẻ. Hội chứng này có thể gây ra rối loạn nhịp tim và thường xảy ra vào ban đêm khi ngủ. Mặc dù chưa có phương pháp chữa khỏi, người bệnh cần được theo dõi và điều trị để tránh các biến chứng nguy hiểm. Các bác sĩ khuyến cáo mọi người nên khám sức khỏe định kỳ để phát hiện sớm các nguy cơ bệnh lý.",
-    "link": "https://vnexpress.net/bat-ngo-phat-hien-mac-hoi-chung-tim-de-gay-dot-tu-4865841.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 9,
-    "question": "Hội chứng Brugada có thể gây ra biến chứng gì cho người bệnh?",
+    "title": "Không gian coworking đắt giá lần đầu tiên xuất hiện tại Nghệ An",
+    "content": "Khu đô thị Eco Central Park tại Nghệ An vừa ra mắt không gian coworking đầu tiên với diện tích 1.100m2, kết hợp giữa không gian làm việc và thiên nhiên. Được thiết kế theo phong cách \"live - work - play\", không gian này không chỉ phục vụ cho cư dân mà còn thu hút những người làm việc tự do, tạo cơ hội giao lưu và sáng tạo. Với nhiều cây xanh và ánh sáng tự nhiên, coworking space tại Central Bay hứa hẹn mang lại trải nghiệm làm việc thoải mái, hiệu quả.",
+    "link": "https://tuoitre.vn/khong-gian-coworking-dat-gia-lan-dau-tien-xuat-hien-tai-nghe-an-20250325184509967.htm",
+    "cat": "kinh-doanh",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Không gian coworking nào vừa được ra mắt tại Nghệ An?",
     "answers": [
       {
-        "text": "Đột tử",
+        "text": "Central Bay tại Eco Central Park",
         "correct": true
       },
       {
-        "text": "Ngất xỉu",
+        "text": "Milan Workspace",
         "correct": false
       },
       {
-        "text": "Đau ngực",
+        "text": "Hanoi Creative Space",
         "correct": false
       },
       {
-        "text": "Rối loạn tiêu hóa",
+        "text": "Saigon Coworking Center",
         "correct": false
       },
       {
-        "text": "Bệnh tiểu đường",
+        "text": "Da Nang Office Hub",
         "correct": false
       }
     ]
@@ -3711,33 +3738,6 @@
     ]
   },
   {
-    "title": "Cả xóm 'biến' xe kéo lúa thành xe đón dâu độc đáo",
-    "content": "Tại xã Hùng Tiến, huyện Nam Đàn, Nghệ An, ông Nguyễn Văn Lộc cùng với bà con trong xóm đã cải tạo một chiếc xe kéo lúa thành xe đón dâu độc đáo cho đám cưới của đôi trẻ Nguyễn Văn Mạnh và Nguyễn Thu Hiền. Chiếc xe được trang trí kỳ công với hoa và bóng bay, mang lại kỷ niệm đáng nhớ cho ngày trọng đại. Đám cưới không chỉ tạo nên không khí vui vẻ mà còn thể hiện tình cảm và sự gắn kết của cộng đồng.",
-    "link": "https://vnexpress.net/ca-xom-bien-xe-keo-lua-thanh-xe-don-dau-doc-dao-4865817.html",
-    "cat": "gia-dinh",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Cộng đồng đã làm gì để tạo nên chiếc xe đón dâu đặc biệt cho đôi trẻ?",
-    "answers": [
-      {
-        "text": "Cải tạo xe kéo lúa thành xe đón dâu",
-        "correct": true
-      },
-      {
-        "text": "Thiết kế một chiếc xe máy mới",
-        "correct": false
-      },
-      {
-        "text": "Thuê xe đón dâu từ ngoài",
-        "correct": false
-      },
-      {
-        "text": "Mua một chiếc xe mới hoàn toàn",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Chuyện về nữ sinh trẻ tuổi nhất nhận giải thưởng Lý Tự Trọng 2025",
     "content": "Nguyễn Thị Cẩm Ly, nữ sinh 18 tuổi từ Trường THPT Cẩm Bình, TP Hà Tĩnh, đã xuất sắc nhận giải thưởng Lý Tự Trọng 2025, trở thành cán bộ Đoàn trẻ tuổi nhất được vinh danh. Cẩm Ly không chỉ là bí thư chi đoàn mà còn tham gia nhiều hoạt động Đoàn sôi nổi, như chiến dịch 'Tiếp sức mùa thi' và các phong trào thiện nguyện. Với thành tích học tập ấn tượng, cô gái này là tấm gương tiêu biểu về tinh thần cống hiến và trách nhiệm đối với cộng đồng.",
     "link": "https://dantri.com.vn/giao-duc/chuyen-ve-nu-sinh-tre-tuoi-nhat-nhan-giai-thuong-ly-tu-trong-2025-20250325230935368.htm",
@@ -3787,6 +3787,33 @@
       },
       {
         "text": "Gãy xương chân",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cả xóm 'biến' xe kéo lúa thành xe đón dâu độc đáo",
+    "content": "Tại xã Hùng Tiến, huyện Nam Đàn, Nghệ An, ông Nguyễn Văn Lộc cùng với bà con trong xóm đã cải tạo một chiếc xe kéo lúa thành xe đón dâu độc đáo cho đám cưới của đôi trẻ Nguyễn Văn Mạnh và Nguyễn Thu Hiền. Chiếc xe được trang trí kỳ công với hoa và bóng bay, mang lại kỷ niệm đáng nhớ cho ngày trọng đại. Đám cưới không chỉ tạo nên không khí vui vẻ mà còn thể hiện tình cảm và sự gắn kết của cộng đồng.",
+    "link": "https://vnexpress.net/ca-xom-bien-xe-keo-lua-thanh-xe-don-dau-doc-dao-4865817.html",
+    "cat": "gia-dinh",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Cộng đồng đã làm gì để tạo nên chiếc xe đón dâu đặc biệt cho đôi trẻ?",
+    "answers": [
+      {
+        "text": "Cải tạo xe kéo lúa thành xe đón dâu",
+        "correct": true
+      },
+      {
+        "text": "Thiết kế một chiếc xe máy mới",
+        "correct": false
+      },
+      {
+        "text": "Thuê xe đón dâu từ ngoài",
+        "correct": false
+      },
+      {
+        "text": "Mua một chiếc xe mới hoàn toàn",
         "correct": false
       }
     ]
