--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Melo: 'Với một chân, Neymar vẫn là cầu thủ hay nhất Brazil'",
+    "content": "Felipe Melo, cựu tiền vệ Brazil, bày tỏ sự ủng hộ mạnh mẽ đối với Neymar sau thất bại 1-4 của Brazil trước Argentina trong vòng loại World Cup 2026. Melo khẳng định rằng Neymar, dù chỉ có một chân, vẫn là cầu thủ xuất sắc nhất Brazil và cần sớm trở lại đội tuyển. Ông chỉ trích sự thiếu quyết tâm và tinh thần chiến đấu của đội tuyển Brazil, nhấn mạnh rằng họ cần phải đoàn kết và chiến đấu vì nhau.",
+    "link": "https://vnexpress.net/melo-voi-mot-chan-neymar-van-la-cau-thu-hay-nhat-brazil-4866176.html",
+    "cat": "the-thao",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Melo nghĩ gì về khả năng của Neymar sau trận thua của Brazil trước Argentina?",
+    "answers": [
+      {
+        "text": "Neymar vẫn là cầu thủ hay nhất Brazil.",
+        "correct": true
+      },
+      {
+        "text": "Neymar không cần thiết cho đội tuyển.",
+        "correct": false
+      },
+      {
+        "text": "Melo không quan tâm đến Neymar.",
+        "correct": false
+      },
+      {
+        "text": "Brazil không cần thay đổi gì.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Vụ cướp 2 triệu USD: Bắt thêm một người, hé lộ tình tiết mới",
     "content": "Cơ quan công an tỉnh Tây Ninh đã bắt giữ 6 người liên quan đến vụ cướp hơn 2 triệu USD, trong đó có một nhóm giả danh công an. Vụ cướp xảy ra vào ngày 10-3-2025, khi bà P.T.M.L. bị nhóm này tấn công và cướp đi số tiền lớn. Sau 13 ngày điều tra, các nghi phạm đã bị bắt và số tiền cướp được cũng đã được thu hồi một phần. Hiện công an đang tiếp tục mở rộng điều tra và truy nã những đối tượng còn lại.",
     "link": "https://tuoitre.vn/vu-cuop-2-trieu-usd-bat-them-mot-nguoi-he-lo-tinh-tiet-moi-20250326173405165.htm",
@@ -197,6 +224,33 @@
     ]
   },
   {
+    "title": "Điều nên làm khi huyết áp không giảm",
+    "content": "Khi huyết áp không giảm, người bệnh cần kiểm tra lại đơn thuốc và điều trị nguyên nhân tiềm ẩn. Họ nên thông báo cho bác sĩ về tất cả loại thuốc và thực phẩm bổ sung đang sử dụng để bác sĩ có thể điều chỉnh liều lượng và loại thuốc phù hợp. Ngoài ra, việc thay đổi lối sống như ăn uống lành mạnh, duy trì cân nặng hợp lý và thư giãn cũng rất quan trọng để kiểm soát huyết áp.",
+    "link": "https://vnexpress.net/dieu-nen-lam-khi-huyet-ap-khong-giam-4866143.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Người bệnh nên làm gì khi huyết áp không giảm?",
+    "answers": [
+      {
+        "text": "Kiểm tra lại đơn thuốc và điều trị nguyên nhân tiềm ẩn.",
+        "correct": true
+      },
+      {
+        "text": "Bỏ thuốc điều trị hoàn toàn.",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường uống rượu.",
+        "correct": false
+      },
+      {
+        "text": "Hạn chế uống nước.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Người trẻ bị run tay có nguy hiểm không?",
     "content": "Người trẻ bị run tay thường do căng thẳng hoặc rối loạn hệ thần kinh thực vật. Tình trạng này có thể là phản ứng tự nhiên hoặc triệu chứng của các bệnh lý nghiêm trọng như bệnh Parkinson hoặc cường giáp. Nếu run tay chỉ xảy ra khi căng thẳng thì không quá nguy hiểm, nhưng nếu triệu chứng kéo dài hoặc ảnh hưởng đến sinh hoạt hàng ngày, cần đi khám bác sĩ để xác định nguyên nhân và điều trị kịp thời. Việc duy trì lối sống lành mạnh và cân bằng giữa công việc và nghỉ ngơi cũng rất quan trọng.",
     "link": "https://vnexpress.net/nguoi-tre-bi-run-tay-co-nguy-hiem-khong-4866229.html",
@@ -223,33 +277,6 @@
       },
       {
         "text": "Chỉ ảnh hưởng đến sức khỏe tâm lý.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Điều nên làm khi huyết áp không giảm",
-    "content": "Khi huyết áp không giảm, người bệnh cần kiểm tra lại đơn thuốc và điều trị nguyên nhân tiềm ẩn. Họ nên thông báo cho bác sĩ về tất cả loại thuốc và thực phẩm bổ sung đang sử dụng để bác sĩ có thể điều chỉnh liều lượng và loại thuốc phù hợp. Ngoài ra, việc thay đổi lối sống như ăn uống lành mạnh, duy trì cân nặng hợp lý và thư giãn cũng rất quan trọng để kiểm soát huyết áp.",
-    "link": "https://vnexpress.net/dieu-nen-lam-khi-huyet-ap-khong-giam-4866143.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Người bệnh nên làm gì khi huyết áp không giảm?",
-    "answers": [
-      {
-        "text": "Kiểm tra lại đơn thuốc và điều trị nguyên nhân tiềm ẩn.",
-        "correct": true
-      },
-      {
-        "text": "Bỏ thuốc điều trị hoàn toàn.",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường uống rượu.",
-        "correct": false
-      },
-      {
-        "text": "Hạn chế uống nước.",
         "correct": false
       }
     ]
@@ -595,33 +622,6 @@
     ]
   },
   {
-    "title": "Điều gì xảy ra khi hormone estrogen, testosterone giảm?",
-    "content": "Khi hormone estrogen và testosterone giảm, sức khỏe và sinh lý của phụ nữ có thể bị ảnh hưởng nghiêm trọng. Estrogen là hormone chính trong hệ sinh sản của nữ giới, và sự giảm sút của nó có thể dẫn đến tình trạng mãn kinh và suy buồng trứng. Ngoài ra, testosterone cũng đóng vai trò quan trọng trong việc duy trì sức khỏe xương và tâm trạng, và khi giảm, có thể gây ra triệu chứng như mệt mỏi và suy giảm khả năng sinh lý.",
-    "link": "https://vnexpress.net/dieu-gi-xay-ra-khi-hormone-estrogen-testosterone-giam-4866052.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Hormone estrogen và testosterone giảm gây ra những hậu quả gì cho sức khỏe phụ nữ?",
-    "answers": [
-      {
-        "text": "Giảm ham muốn tình dục, mệt mỏi, và suy giảm sức khỏe sinh lý.",
-        "correct": true
-      },
-      {
-        "text": "Tăng cường sức khỏe xương và tinh thần.",
-        "correct": false
-      },
-      {
-        "text": "Giảm nguy cơ mắc các bệnh phụ khoa.",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường năng lượng và cải thiện tâm trạng.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Tiêm corticoid trị sẹo lồi",
     "content": "Tiêm corticoid, đặc biệt là triamcinolone, được sử dụng để điều trị sẹo lồi bằng cách giảm quá trình viêm và sản xuất collagen. Phương pháp này giúp cải thiện thẩm mỹ và giảm triệu chứng như ngứa rát ở những người có sẹo lồi. Để đạt hiệu quả tốt nhất, bệnh nhân cần được khám và tiêm đúng cách, và có thể cần đến vài buổi điều trị. Tuy nhiên, liệu pháp này không phù hợp cho một số trường hợp cụ thể như phụ nữ mang thai hay người có bệnh lý nền nghiêm trọng.",
     "link": "https://vnexpress.net/tiem-corticoid-tri-seo-loi-4866174.html",
@@ -671,6 +671,33 @@
       },
       {
         "text": "Cộng đồng người Pháp",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Điều gì xảy ra khi hormone estrogen, testosterone giảm?",
+    "content": "Khi hormone estrogen và testosterone giảm, sức khỏe và sinh lý của phụ nữ có thể bị ảnh hưởng nghiêm trọng. Estrogen là hormone chính trong hệ sinh sản của nữ giới, và sự giảm sút của nó có thể dẫn đến tình trạng mãn kinh và suy buồng trứng. Ngoài ra, testosterone cũng đóng vai trò quan trọng trong việc duy trì sức khỏe xương và tâm trạng, và khi giảm, có thể gây ra triệu chứng như mệt mỏi và suy giảm khả năng sinh lý.",
+    "link": "https://vnexpress.net/dieu-gi-xay-ra-khi-hormone-estrogen-testosterone-giam-4866052.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Hormone estrogen và testosterone giảm gây ra những hậu quả gì cho sức khỏe phụ nữ?",
+    "answers": [
+      {
+        "text": "Giảm ham muốn tình dục, mệt mỏi, và suy giảm sức khỏe sinh lý.",
+        "correct": true
+      },
+      {
+        "text": "Tăng cường sức khỏe xương và tinh thần.",
+        "correct": false
+      },
+      {
+        "text": "Giảm nguy cơ mắc các bệnh phụ khoa.",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường năng lượng và cải thiện tâm trạng.",
         "correct": false
       }
     ]
@@ -2716,6 +2743,33 @@
     ]
   },
   {
+    "title": "Vì sao hắt hơi liên tục khi hít tiêu hay hành tây?",
+    "content": "Hắt hơi liên tục khi hít phải tiêu hoặc hành tây là một phản xạ tự nhiên của cơ thể do các hợp chất dễ bay hơi trong những thực phẩm này gây ra. Tiêu chứa piperine và hành tây có allyl propyl disulfide, khi hít vào sẽ kích thích niêm mạc mũi và mắt, dẫn đến phản ứng hắt hơi để loại bỏ các chất kích thích. Điều này không nhất thiết là dấu hiệu dị ứng, nhưng những người có niêm mạc nhạy cảm có thể phản ứng mạnh hơn. Để giảm triệu chứng, người dùng nên đeo khẩu trang và giữ không gian thông thoáng khi chế biến các thực phẩm này.",
+    "link": "https://vnexpress.net/vi-sao-hat-hoi-lien-tuc-khi-hit-tieu-hay-hanh-tay-4865952.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 5,
+    "question": "Tại sao hắt hơi khi hít phải tiêu hay hành tây?",
+    "answers": [
+      {
+        "text": "Vì các hợp chất trong tiêu và hành tây kích thích niêm mạc mũi.",
+        "correct": true
+      },
+      {
+        "text": "Vì đây là dấu hiệu của bệnh dị ứng.",
+        "correct": false
+      },
+      {
+        "text": "Vì không khí lạnh làm cho mũi nhạy cảm hơn.",
+        "correct": false
+      },
+      {
+        "text": "Vì tiêu và hành tây có mùi hôi mạnh.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ho ra đờm màu vàng có phải dấu hiệu bệnh?",
     "content": "Ho ra đờm màu vàng có thể là dấu hiệu của các bệnh hô hấp như viêm phế quản, viêm phổi hoặc hen suyễn. Màu vàng của đờm chủ yếu do sự hiện diện của bạch cầu trung tính đã chết, cho thấy cơ thể đang phản ứng với nhiễm trùng. Nếu tình trạng này kéo dài hơn một tuần hoặc kèm theo các triệu chứng như sốt, khó thở, người bệnh nên đi khám bác sĩ để được chẩn đoán và điều trị kịp thời.",
     "link": "https://vnexpress.net/ho-ra-dom-mau-vang-co-phai-dau-hieu-benh-4865965.html",
@@ -2769,33 +2823,6 @@
       },
       {
         "text": "80 kg",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Vì sao hắt hơi liên tục khi hít tiêu hay hành tây?",
-    "content": "Hắt hơi liên tục khi hít phải tiêu hoặc hành tây là một phản xạ tự nhiên của cơ thể do các hợp chất dễ bay hơi trong những thực phẩm này gây ra. Tiêu chứa piperine và hành tây có allyl propyl disulfide, khi hít vào sẽ kích thích niêm mạc mũi và mắt, dẫn đến phản ứng hắt hơi để loại bỏ các chất kích thích. Điều này không nhất thiết là dấu hiệu dị ứng, nhưng những người có niêm mạc nhạy cảm có thể phản ứng mạnh hơn. Để giảm triệu chứng, người dùng nên đeo khẩu trang và giữ không gian thông thoáng khi chế biến các thực phẩm này.",
-    "link": "https://vnexpress.net/vi-sao-hat-hoi-lien-tuc-khi-hit-tieu-hay-hanh-tay-4865952.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 5,
-    "question": "Tại sao hắt hơi khi hít phải tiêu hay hành tây?",
-    "answers": [
-      {
-        "text": "Vì các hợp chất trong tiêu và hành tây kích thích niêm mạc mũi.",
-        "correct": true
-      },
-      {
-        "text": "Vì đây là dấu hiệu của bệnh dị ứng.",
-        "correct": false
-      },
-      {
-        "text": "Vì không khí lạnh làm cho mũi nhạy cảm hơn.",
-        "correct": false
-      },
-      {
-        "text": "Vì tiêu và hành tây có mùi hôi mạnh.",
         "correct": false
       }
     ]
@@ -3354,37 +3381,6 @@
     ]
   },
   {
-    "title": "Không gian coworking đắt giá lần đầu tiên xuất hiện tại Nghệ An",
-    "content": "Khu đô thị Eco Central Park tại Nghệ An vừa ra mắt không gian coworking đầu tiên với diện tích 1.100m2, kết hợp giữa không gian làm việc và thiên nhiên. Được thiết kế theo phong cách \"live - work - play\", không gian này không chỉ phục vụ cho cư dân mà còn thu hút những người làm việc tự do, tạo cơ hội giao lưu và sáng tạo. Với nhiều cây xanh và ánh sáng tự nhiên, coworking space tại Central Bay hứa hẹn mang lại trải nghiệm làm việc thoải mái, hiệu quả.",
-    "link": "https://tuoitre.vn/khong-gian-coworking-dat-gia-lan-dau-tien-xuat-hien-tai-nghe-an-20250325184509967.htm",
-    "cat": "kinh-doanh",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Không gian coworking nào vừa được ra mắt tại Nghệ An?",
-    "answers": [
-      {
-        "text": "Central Bay tại Eco Central Park",
-        "correct": true
-      },
-      {
-        "text": "Milan Workspace",
-        "correct": false
-      },
-      {
-        "text": "Hanoi Creative Space",
-        "correct": false
-      },
-      {
-        "text": "Saigon Coworking Center",
-        "correct": false
-      },
-      {
-        "text": "Da Nang Office Hub",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Tiêu cơ vân do tập squat quá sức",
     "content": "Nghĩa, 22 tuổi, đã bị tiêu cơ vân cấp sau ba ngày tập squat cường độ cao mà không có bệnh lý nền. Chẩn đoán cho thấy chỉ số creatine kinase của anh tăng cao, cho thấy tình trạng nguy hiểm có thể dẫn đến suy thận. Bác sĩ khuyến cáo rằng tiêu cơ vân có thể gây ra nhiều biến chứng nghiêm trọng, bao gồm suy đa tạng. Để phòng ngừa, người tập thể hình cần tăng cường độ từ từ và theo dõi sức khỏe của bản thân.",
     "link": "https://vnexpress.net/tieu-co-van-do-tap-squat-qua-suc-4865721.html",
@@ -3442,6 +3438,37 @@
       },
       {
         "text": "Bệnh tiểu đường",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Không gian coworking đắt giá lần đầu tiên xuất hiện tại Nghệ An",
+    "content": "Khu đô thị Eco Central Park tại Nghệ An vừa ra mắt không gian coworking đầu tiên với diện tích 1.100m2, kết hợp giữa không gian làm việc và thiên nhiên. Được thiết kế theo phong cách \"live - work - play\", không gian này không chỉ phục vụ cho cư dân mà còn thu hút những người làm việc tự do, tạo cơ hội giao lưu và sáng tạo. Với nhiều cây xanh và ánh sáng tự nhiên, coworking space tại Central Bay hứa hẹn mang lại trải nghiệm làm việc thoải mái, hiệu quả.",
+    "link": "https://tuoitre.vn/khong-gian-coworking-dat-gia-lan-dau-tien-xuat-hien-tai-nghe-an-20250325184509967.htm",
+    "cat": "kinh-doanh",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Không gian coworking nào vừa được ra mắt tại Nghệ An?",
+    "answers": [
+      {
+        "text": "Central Bay tại Eco Central Park",
+        "correct": true
+      },
+      {
+        "text": "Milan Workspace",
+        "correct": false
+      },
+      {
+        "text": "Hanoi Creative Space",
+        "correct": false
+      },
+      {
+        "text": "Saigon Coworking Center",
+        "correct": false
+      },
+      {
+        "text": "Da Nang Office Hub",
         "correct": false
       }
     ]
@@ -3895,33 +3922,6 @@
     ]
   },
   {
-    "title": "Dự kiến phương án sắp xếp phường xã 22 quận huyện của TP HCM",
-    "content": "TP HCM đang dự kiến thực hiện phương án sắp xếp lại các phường và xã tại 22 quận huyện, theo đó quận 3 và huyện Hóc Môn có thể trở thành một phường và xã. TP Thủ Đức sẽ chuyển thành 9 phường mới, trong khi nhiều quận nội đô sẽ được tổ chức lại thành 2-3 phường. Mục tiêu của kế hoạch này là giảm số đơn vị hành chính từ 273 xuống còn hơn 80, nhằm tinh gọn bộ máy và nâng cao hiệu quả quản lý.",
-    "link": "https://vnexpress.net/du-kien-phuong-an-sap-xep-phuong-xa-22-quan-huyen-cua-tp-hcm-4865782.html",
-    "cat": "thoi-su",
-    "positivity": 7,
-    "importance": 9,
-    "question": "TP HCM dự kiến sắp xếp lại bao nhiêu phường và xã?",
-    "answers": [
-      {
-        "text": "Hơn 80 phường và xã",
-        "correct": true
-      },
-      {
-        "text": "273 phường và xã",
-        "correct": false
-      },
-      {
-        "text": "150 phường và xã",
-        "correct": false
-      },
-      {
-        "text": "100 phường và xã",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Các tài xế xe điện Xiaomi liên tiếp gây tai nạn",
     "content": "Gần đây, các tài xế của siêu xe điện Xiaomi SU7 Ultra đã liên tiếp gây ra tai nạn nghiêm trọng tại thành phố Quảng Châu, Trung Quốc. Một tài xế đã tăng tốc lên gần 180 km/h vào ban đêm và đâm vào một xe đạp điện, khiến người lái bị thương nặng. Một sự cố khác cũng xảy ra khi một tài xế khác lái xe với tốc độ gần 150 km/h, dẫn đến một vụ va chạm không rõ tình trạng người liên quan. Những tai nạn này đang gây lo ngại về việc kiểm soát tốc độ và an toàn giao thông của các tài xế xe điện này.",
     "link": "https://vnexpress.net/cac-tai-xe-xe-dien-xiaomi-lien-tiep-gay-tai-nan-4865675.html",
@@ -3944,6 +3944,33 @@
       },
       {
         "text": "Vì tài xế không có kinh nghiệm",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Dự kiến phương án sắp xếp phường xã 22 quận huyện của TP HCM",
+    "content": "TP HCM đang dự kiến thực hiện phương án sắp xếp lại các phường và xã tại 22 quận huyện, theo đó quận 3 và huyện Hóc Môn có thể trở thành một phường và xã. TP Thủ Đức sẽ chuyển thành 9 phường mới, trong khi nhiều quận nội đô sẽ được tổ chức lại thành 2-3 phường. Mục tiêu của kế hoạch này là giảm số đơn vị hành chính từ 273 xuống còn hơn 80, nhằm tinh gọn bộ máy và nâng cao hiệu quả quản lý.",
+    "link": "https://vnexpress.net/du-kien-phuong-an-sap-xep-phuong-xa-22-quan-huyen-cua-tp-hcm-4865782.html",
+    "cat": "thoi-su",
+    "positivity": 7,
+    "importance": 9,
+    "question": "TP HCM dự kiến sắp xếp lại bao nhiêu phường và xã?",
+    "answers": [
+      {
+        "text": "Hơn 80 phường và xã",
+        "correct": true
+      },
+      {
+        "text": "273 phường và xã",
+        "correct": false
+      },
+      {
+        "text": "150 phường và xã",
+        "correct": false
+      },
+      {
+        "text": "100 phường và xã",
         "correct": false
       }
     ]
