--- a/home.html
+++ b/home.html
@@ -175,6 +175,33 @@
     ]
   },
   {
+    "title": "8 thói quen mỗi ngày giúp đi ngủ sớm",
+    "content": "Bài viết trình bày 8 thói quen giúp mọi người đi ngủ sớm hơn, bao gồm việc duy trì lịch trình ngủ, tránh caffeine và giảm thời gian sử dụng điện thoại trước khi ngủ. Ngủ đủ giấc từ 7-9 giờ mỗi đêm rất quan trọng cho sức khỏe tổng thể, góp phần giảm căng thẳng và cải thiện tâm trạng. Ngoài ra, các mẹo như thư giãn trước khi ngủ, tránh ăn nhiều và không tập thể dục muộn cũng được đề cập để hỗ trợ thói quen ngủ sớm.",
+    "link": "https://vnexpress.net/8-thoi-quen-moi-ngay-giup-di-ngu-som-4866098.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Làm thế nào để cải thiện thói quen ngủ sớm hàng ngày?",
+    "answers": [
+      {
+        "text": "Duy trì lịch trình ngủ nhất quán.",
+        "correct": true
+      },
+      {
+        "text": "Uống nhiều cà phê vào buổi tối.",
+        "correct": false
+      },
+      {
+        "text": "Xem tivi trước khi đi ngủ.",
+        "correct": false
+      },
+      {
+        "text": "Không cần thư giãn trước khi ngủ.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Vụ cướp 2 triệu USD: Bắt thêm một người, hé lộ tình tiết mới",
     "content": "Cơ quan công an tỉnh Tây Ninh đã bắt giữ 6 người liên quan đến vụ cướp hơn 2 triệu USD, trong đó có một nhóm giả danh công an. Vụ cướp xảy ra vào ngày 10-3-2025, khi bà P.T.M.L. bị nhóm này tấn công và cướp đi số tiền lớn. Sau 13 ngày điều tra, các nghi phạm đã bị bắt và số tiền cướp được cũng đã được thu hồi một phần. Hiện công an đang tiếp tục mở rộng điều tra và truy nã những đối tượng còn lại.",
     "link": "https://tuoitre.vn/vu-cuop-2-trieu-usd-bat-them-mot-nguoi-he-lo-tinh-tiet-moi-20250326173405165.htm",
@@ -2810,33 +2837,6 @@
     ]
   },
   {
-    "title": "Vì sao hắt hơi liên tục khi hít tiêu hay hành tây?",
-    "content": "Hắt hơi liên tục khi hít phải tiêu hoặc hành tây là một phản xạ tự nhiên của cơ thể do các hợp chất dễ bay hơi trong những thực phẩm này gây ra. Tiêu chứa piperine và hành tây có allyl propyl disulfide, khi hít vào sẽ kích thích niêm mạc mũi và mắt, dẫn đến phản ứng hắt hơi để loại bỏ các chất kích thích. Điều này không nhất thiết là dấu hiệu dị ứng, nhưng những người có niêm mạc nhạy cảm có thể phản ứng mạnh hơn. Để giảm triệu chứng, người dùng nên đeo khẩu trang và giữ không gian thông thoáng khi chế biến các thực phẩm này.",
-    "link": "https://vnexpress.net/vi-sao-hat-hoi-lien-tuc-khi-hit-tieu-hay-hanh-tay-4865952.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 5,
-    "question": "Tại sao hắt hơi khi hít phải tiêu hay hành tây?",
-    "answers": [
-      {
-        "text": "Vì các hợp chất trong tiêu và hành tây kích thích niêm mạc mũi.",
-        "correct": true
-      },
-      {
-        "text": "Vì đây là dấu hiệu của bệnh dị ứng.",
-        "correct": false
-      },
-      {
-        "text": "Vì không khí lạnh làm cho mũi nhạy cảm hơn.",
-        "correct": false
-      },
-      {
-        "text": "Vì tiêu và hành tây có mùi hôi mạnh.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Ho ra đờm màu vàng có phải dấu hiệu bệnh?",
     "content": "Ho ra đờm màu vàng có thể là dấu hiệu của các bệnh hô hấp như viêm phế quản, viêm phổi hoặc hen suyễn. Màu vàng của đờm chủ yếu do sự hiện diện của bạch cầu trung tính đã chết, cho thấy cơ thể đang phản ứng với nhiễm trùng. Nếu tình trạng này kéo dài hơn một tuần hoặc kèm theo các triệu chứng như sốt, khó thở, người bệnh nên đi khám bác sĩ để được chẩn đoán và điều trị kịp thời.",
     "link": "https://vnexpress.net/ho-ra-dom-mau-vang-co-phai-dau-hieu-benh-4865965.html",
@@ -2890,6 +2890,33 @@
       },
       {
         "text": "80 kg",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Vì sao hắt hơi liên tục khi hít tiêu hay hành tây?",
+    "content": "Hắt hơi liên tục khi hít phải tiêu hoặc hành tây là một phản xạ tự nhiên của cơ thể do các hợp chất dễ bay hơi trong những thực phẩm này gây ra. Tiêu chứa piperine và hành tây có allyl propyl disulfide, khi hít vào sẽ kích thích niêm mạc mũi và mắt, dẫn đến phản ứng hắt hơi để loại bỏ các chất kích thích. Điều này không nhất thiết là dấu hiệu dị ứng, nhưng những người có niêm mạc nhạy cảm có thể phản ứng mạnh hơn. Để giảm triệu chứng, người dùng nên đeo khẩu trang và giữ không gian thông thoáng khi chế biến các thực phẩm này.",
+    "link": "https://vnexpress.net/vi-sao-hat-hoi-lien-tuc-khi-hit-tieu-hay-hanh-tay-4865952.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 5,
+    "question": "Tại sao hắt hơi khi hít phải tiêu hay hành tây?",
+    "answers": [
+      {
+        "text": "Vì các hợp chất trong tiêu và hành tây kích thích niêm mạc mũi.",
+        "correct": true
+      },
+      {
+        "text": "Vì đây là dấu hiệu của bệnh dị ứng.",
+        "correct": false
+      },
+      {
+        "text": "Vì không khí lạnh làm cho mũi nhạy cảm hơn.",
+        "correct": false
+      },
+      {
+        "text": "Vì tiêu và hành tây có mùi hôi mạnh.",
         "correct": false
       }
     ]
@@ -2984,6 +3011,33 @@
     ]
   },
   {
+    "title": "Hy hữu: Công ty nhiệt điện của Geleximco báo ‘nhầm’ lỗ đậm thành lãi, huy động nghìn tỉ trái phiếu",
+    "content": "Công ty cổ phần Nhiệt điện Thăng Long, thuộc Tập đoàn Geleximco, vừa đính chính một sai sót nghiêm trọng trong báo cáo tài chính khi báo lãi thay vì lỗ. Theo đó, công ty đã ghi nhận lỗ 528 tỉ đồng cho năm 2023, trong khi năm 2022 lãi 121,8 tỉ đồng. Sai sót này được cho là do nhầm lẫn trong việc đánh dấu vị trí cột 'kỳ trước' và 'kỳ báo cáo'. Ngoài ra, công ty cũng đã huy động gần 1.800 tỉ đồng từ phát hành trái phiếu doanh nghiệp vào tháng 8-2024.",
+    "link": "https://tuoitre.vn/hy-huu-cong-ty-nhiet-dien-cua-geleximco-bao-nham-lo-dam-thanh-lai-huy-dong-nghin-ti-trai-phieu-20250326091855138.htm",
+    "cat": "kinh-doanh",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao Nhiệt điện Thăng Long phải đính chính báo cáo tài chính?",
+    "answers": [
+      {
+        "text": "Vì sai sót trong việc báo cáo lãi thành lỗ",
+        "correct": true
+      },
+      {
+        "text": "Do thay đổi ban lãnh đạo",
+        "correct": false
+      },
+      {
+        "text": "Vì áp lực từ cổ đông",
+        "correct": false
+      },
+      {
+        "text": "Do quy định mới của HNX",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Các mốc thời gian quan trọng kỳ thi tốt nghiệp THPT 2025",
     "content": "Kỳ thi tốt nghiệp THPT năm 2025 sẽ diễn ra vào ngày 26-27 tháng 6. Thí sinh có thể đăng ký dự thi từ ngày 21/4 đến 28/4, trong đó có thời gian để đăng ký thử từ 15-18/4. Bộ GD&ĐT cũng yêu cầu thí sinh sử dụng một loại giấy tờ tùy thân nhất định và đảm bảo ảnh hồ sơ đạt yêu cầu về độ phân giải. Ngày 28/6 sẽ là lịch thi dự phòng.",
     "link": "https://dantri.com.vn/giao-duc/cac-moc-thoi-gian-quan-trong-ky-thi-tot-nghiep-thpt-2025-20250326085929751.htm",
@@ -3010,33 +3064,6 @@
       },
       {
         "text": "Thí sinh chỉ cần thi một môn duy nhất",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Hy hữu: Công ty nhiệt điện của Geleximco báo ‘nhầm’ lỗ đậm thành lãi, huy động nghìn tỉ trái phiếu",
-    "content": "Công ty cổ phần Nhiệt điện Thăng Long, thuộc Tập đoàn Geleximco, vừa đính chính một sai sót nghiêm trọng trong báo cáo tài chính khi báo lãi thay vì lỗ. Theo đó, công ty đã ghi nhận lỗ 528 tỉ đồng cho năm 2023, trong khi năm 2022 lãi 121,8 tỉ đồng. Sai sót này được cho là do nhầm lẫn trong việc đánh dấu vị trí cột 'kỳ trước' và 'kỳ báo cáo'. Ngoài ra, công ty cũng đã huy động gần 1.800 tỉ đồng từ phát hành trái phiếu doanh nghiệp vào tháng 8-2024.",
-    "link": "https://tuoitre.vn/hy-huu-cong-ty-nhiet-dien-cua-geleximco-bao-nham-lo-dam-thanh-lai-huy-dong-nghin-ti-trai-phieu-20250326091855138.htm",
-    "cat": "kinh-doanh",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao Nhiệt điện Thăng Long phải đính chính báo cáo tài chính?",
-    "answers": [
-      {
-        "text": "Vì sai sót trong việc báo cáo lãi thành lỗ",
-        "correct": true
-      },
-      {
-        "text": "Do thay đổi ban lãnh đạo",
-        "correct": false
-      },
-      {
-        "text": "Vì áp lực từ cổ đông",
-        "correct": false
-      },
-      {
-        "text": "Do quy định mới của HNX",
         "correct": false
       }
     ]
